# QuartzOS_Open

./: Cargo.toml  README.md  x86_64-quartz_os.json
.cargo/: config.toml
src/: lib.rs  main.rs  vga_buffer.rs
