[package]
name = "quartz_os"
version = "0.1.0"
edition = "2024"
authors = ["IchoDev <johnathontech@gmail.com>"]

[[bin]]
name = "quartz_os"
test = true
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/x86_64-quartz_os/debug/bootimage-quartz_os.bin"]

