[package]
name = "quartz_os"
version = "0.1.0"
edition = "2024"
authors = ["IchoDev <johnathontech@gmail.com>"]

[[bin]]
name = "quartz_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/x86_64-quartz_os/debug/bootimage-quartz_os.bin", "-serial", "stdio"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none"
]   
test-success-exit-code = 33
test-timeout = 300
